65Demo/src/objects/cd_s3_region_endpoints__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Endpoint URLs for the corresponding AWS S3 regions.</description>
    <fields>
        <fullName>cd_Endpoint_URL__c</fullName>
        <description>Endpoint URL of the corresponding region.</description>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_Region_Name__c</fullName>
        <description>Name of the region.</description>
        <label>Region Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cd_Region__c</fullName>
        <description>Region of the S3 account.</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>S3_region_endpoints</label>
</CustomObject>